[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "elasticdash_test"
version = "0.1.2a2"
description = "Elasticdash AI test framework for Python"
authors = [{ name = "Elasticdash", email = "contact@elasticdash.com" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "click>=8.0",
  "httpx>=0.27",
  "aiohttp>=3.9",
  "python-dotenv>=1.0",
]

[project.optional-dependencies]
extras = [
  "requests>=2.32",
  "colorama>=0.4",
]

test = [
  "pytest>=7.4",
  "pytest-asyncio>=0.23",
  "respx>=0.21",
]

[project.scripts]
elasticdash = "elasticdash_test.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["elasticdash_test"]
